# faq

./: .gitignore  CHANGES.md  Dockerfile  Dockerfile.minimal  FILE_UPLOAD_README.md  GOOGLE_FORM_INTEGRATION_GUIDE.md  PROGRESS_2026-01-20.md  PROGRESS_2026-01-20_FINAL.md  PROGRESS_2026-01-20_PM.md  PROGRESS_2026-01-24_EVENING.md  PROGRESS_2026-01-25_COMPLETE.md  RAG_ISSUE_DIAGNOSIS_2026-01-24.md  RAILWAY_COMMAND.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  SECURITY_REVIEW_REPORT.md  auto_setup.py  check_embedding_status.py  check_google_drive.py  check_rag_documents.py  check_rag_initialization.py  check_sheets.py  clear_rag_data.py  create_auth_sheets.py  create_sheets_local.py  create_step3_sheets.py  debug_flows.py  debug_startup.py  env.example  fix_flows_sheet.py  google_apps_script_auto.js  google_apps_script_simple_auto.js  manual_collect_drive.py  minimal_app.py  progress_report_20260121.md  progress_report_20260121_evening.md  pyproject.toml  railway.toml  railway_setup.py  render.yaml  (+15 more)
docs/: ADMIN_GUIDE.md  API_SPECIFICATION.md  AUTH_SYSTEM_SETUP.md  AUTH_SYSTEM_SUMMARY.md  BOT_TESTING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  FINAL_TESTING_CHECKLIST.md  PRODUCTION_LAUNCH_GUIDE.md  RAILWAY_DATABASE_SETUP.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_SHEET_CREATION.md  RAILWAY_TEST_GUIDE.md  REQUIREMENTS.md  STEP2_FLOWS_SHEET_SETUP.md  STEP2_TEST_SUMMARY.md  STEP3_FINAL_APPS_SCRIPT.md  STEP3_FULL_AUTO_SCRIPT.md  STEP3_GOOGLE_FORM_SETUP.md  STEP3_INSTANT_AUTO_SCRIPT.md  STEP3_TROUBLESHOOTING.md  STEP4_EXECUTION_CHECKLIST.md  STEP4_SETUP_GUIDE.md  (+3 more)
(+86 files in other folders)
